examples/type_system/failing/88_effect_op_signature_argument_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/88_effect_op_signature_argument_mismatch.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/88_effect_op_signature_argument_mismatch.flx:36:35
//    |
// 36 |     let _ = (perform Console.read(123)) handle Console {
//    |                                   ^^^
//    |                                   --- this expression has type `Int`
//
//    |                                   --- perform argument type is known at compile time
//
// Note:
//   expected type: String
//   found type: Int
//
// Help:
//   Try `to_string(...)` to convert a `Int` into a `String`.
//   argument does not match effect operation signature
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E300: effect operation argument mismatch.
// `Console.read` expects `String`, but call passes `Int`.

effect Console {
    read: String -> Int
}

fn main() -> Unit with IO {
    let _ = (perform Console.read(123)) handle Console {
        read(_resume, _msg) -> 0
    }
}
